@@ -26,9 +26,12 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.io.StringWriter;
 import java.io.Writer;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.EnumSet;
@@ -38,6 +41,9 @@ import java.util.Map.Entry;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.CountDownLatch;
+import javax.lang.model.SourceVersion;
+import javax.swing.event.ChangeListener;
+import java.util.stream.Collectors;
 import javax.swing.text.Document;
 import org.netbeans.api.java.lexer.JavaTokenId;
 import org.netbeans.api.java.source.Task;
@@ -45,16 +51,19 @@ import org.netbeans.api.java.source.CompilationController;
 import org.netbeans.api.java.source.JavaSource;
 import org.netbeans.api.java.source.JavaSource.Phase;
 import org.netbeans.api.java.source.SourceUtilsTestUtil;
+import org.netbeans.api.java.source.TestUtilities;
 import org.netbeans.api.java.source.TreePathHandle;
 import org.netbeans.api.lexer.Language;
 import org.netbeans.api.lexer.Token;
 import org.netbeans.junit.NbTestCase;
 import org.netbeans.spi.editor.hints.ErrorDescription;
+import org.netbeans.spi.java.queries.CompilerOptionsQueryImplementation;
 import org.openide.cookies.EditorCookie;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.filesystems.MIMEResolver;
 import org.openide.loaders.DataObject;
+import org.openide.util.Pair;
 
 /**
  *
@@ -95,23 +104,98 @@ public abstract class TestBase extends NbTestCase {
     }
     
     protected void performTest(String fileName, final Performer performer, boolean doCompileRecursively) throws Exception {
-        SourceUtilsTestUtil.prepareTest(new String[] {"org/netbeans/modules/java/editor/resources/layer.xml"}, new Object[] {new MIMEResolverImpl()});
+        performTest(() -> {
+            File wd = getWorkDir();
+            File testSource = new File(wd, "test/" + fileName + ".java");
+
+            testSource.getParentFile().mkdirs();
+
+            File dataFolder = new File(getDataDir(), "org/netbeans/modules/java/editor/base/semantic/data/");
+
+            for (File f : dataFolder.listFiles()) {
+                copyToWorkDir(f, new File(wd, "test/" + f.getName()));
+            }
+
+            return FileUtil.toFileObject(testSource);
+        }, performer, doCompileRecursively,
+        actual -> {
+            File output = new File(getWorkDir(), getName() + ".out");
+            try (Writer out2File = new FileWriter(output)) {
+                out2File.append(actual);
+            }
+
+            boolean wasException = true;
+
+            try {
+                File goldenFile = getGoldenFile();
+                File diffFile = new File(getWorkDir(), getName() + ".diff");
+
+                assertFile(output, goldenFile, diffFile);
+                wasException = false;
+            } finally {
+                if (wasException && SHOW_GUI_DIFF) {
+                    try {
+                        String name = getClass().getName();
+
+                        name = name.substring(name.lastIndexOf('.') + 1);
+
+                        ShowGoldenFiles.run(name, getName(), fileName);
+
+                    } catch (Exception e) {
+                        e.printStackTrace();
+                    }
+                }
+            }
+        });
+    }
+
+    protected void performTest(String filename, String content, final Performer performer, boolean doCompileRecursively, String expected) throws Exception {
+        performTest(() -> {
+            FileObject wd = FileUtil.toFileObject(getWorkDir());
+            FileObject result = FileUtil.createData(wd, filename);
+
+            try (Writer out = new OutputStreamWriter(result.getOutputStream())) {
+                out.write(content);
+            }
+
+            return result;
+        }, performer, doCompileRecursively,
+        actual -> {
+            assertEquals(expected, actual);
+        });
+    }
+
+    protected void performTest(Input input, final Performer performer, boolean doCompileRecursively, Validator validator) throws Exception {
+        SourceUtilsTestUtil.prepareTest(new String[] {"org/netbeans/modules/java/editor/resources/layer.xml"}, new Object[] {
+            new MIMEResolverImpl(),
+            new CompilerOptionsQueryImplementation() {
+                @Override
+                public CompilerOptionsQueryImplementation.Result getOptions(FileObject file) {
+                    if (testSourceFO == file) {
+                        return new CompilerOptionsQueryImplementation.Result() {
+                            @Override
+                            public List<? extends String> getArguments() {
+                                return extraOptions;
+                            }
+
+                            @Override
+                            public void addChangeListener(ChangeListener listener) {}
+
+                            @Override
+                            public void removeChangeListener(ChangeListener listener) {}
+                        };
+                    }
+                    return null;
+                }
+            }
+        });
         
 	FileObject scratch = SourceUtilsTestUtil.makeScratchDir(this);
 	FileObject cache   = scratch.createFolder("cache");
 	
         File wd         = getWorkDir();
-        File testSource = new File(wd, "test/" + fileName + ".java");
-        
-        testSource.getParentFile().mkdirs();
-        
-        File dataFolder = new File(getDataDir(), "org/netbeans/modules/java/editor/base/semantic/data/");
-        
-        for (File f : dataFolder.listFiles()) {
-            copyToWorkDir(f, new File(wd, "test/" + f.getName()));
-        }
-        
-        testSourceFO = FileUtil.toFileObject(testSource);
+
+        testSourceFO = input.prepare();
 
         assertNotNull(testSourceFO);
 
@@ -123,7 +207,7 @@ public abstract class TestBase extends NbTestCase {
         
         testBuildTo.mkdirs();
         
-        FileObject srcRoot = FileUtil.toFileObject(testSource.getParentFile());
+        FileObject srcRoot = testSourceFO.getParent();
         SourceUtilsTestUtil.prepareTest(srcRoot,FileUtil.toFileObject(testBuildTo), cache);
         
         if (doCompileRecursively) {
@@ -162,8 +246,7 @@ public abstract class TestBase extends NbTestCase {
 	
         l.await();
                 
-        File output = new File(getWorkDir(), getName() + ".out");
-        Writer out = new FileWriter(output);
+        StringWriter out = new StringWriter();
         
         for (HighlightImpl h : highlights) {
             out.write(h.getHighlightTestData());
@@ -172,33 +255,78 @@ public abstract class TestBase extends NbTestCase {
         }
         
         out.close();
-                
-        boolean wasException = true;
         
-        try {
-            File goldenFile = getGoldenFile();
-            File diffFile = new File(getWorkDir(), getName() + ".diff");
-            
-            assertFile(output, goldenFile, diffFile);
-            wasException = false;
-        } finally {
-            if (wasException && SHOW_GUI_DIFF) {
-                try {
-                    String name = getClass().getName();
-                    
-                    name = name.substring(name.lastIndexOf('.') + 1);
-                    
-                    ShowGoldenFiles.run(name, getName(), fileName);
-                    
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-            }
-        }
+        validator.validate(out.toString());
     }
     
-    protected ColoringAttributes getColoringAttribute() {
-        return ColoringAttributes.UNUSED;
+    protected void performTest(String fileName, String code, Performer performer, String... expected) throws Exception {
+        performTest(fileName, code, performer, false, expected);
+    }
+
+    protected void performTest(String fileName, String code, Performer performer, boolean doCompileRecursively, String... expected) throws Exception {
+        SourceUtilsTestUtil.prepareTest(new String[] {"org/netbeans/modules/java/editor/resources/layer.xml"}, new Object[] {new MIMEResolverImpl()});
+
+	FileObject scratch = SourceUtilsTestUtil.makeScratchDir(this);
+	FileObject cache   = scratch.createFolder("cache");
+
+        File wd         = getWorkDir();
+        File testSource = new File(wd, "test/" + fileName + ".java");
+
+        testSource.getParentFile().mkdirs();
+        TestUtilities.copyStringToFile(testSource, code);
+
+        testSourceFO = FileUtil.toFileObject(testSource);
+
+        assertNotNull(testSourceFO);
+
+        if (sourceLevel != null) {
+            SourceUtilsTestUtil.setSourceLevel(testSourceFO, sourceLevel);
+        }
+
+        File testBuildTo = new File(wd, "test-build");
+
+        testBuildTo.mkdirs();
+
+        FileObject srcRoot = FileUtil.toFileObject(testSource.getParentFile());
+        SourceUtilsTestUtil.prepareTest(srcRoot,FileUtil.toFileObject(testBuildTo), cache);
+
+        if (doCompileRecursively) {
+            SourceUtilsTestUtil.compileRecursively(srcRoot);
+        }
+
+        final Document doc = getDocument(testSourceFO);
+        final List<HighlightImpl> highlights = new ArrayList<HighlightImpl>();
+
+        JavaSource source = JavaSource.forFileObject(testSourceFO);
+
+        assertNotNull(source);
+
+	final CountDownLatch l = new CountDownLatch(1);
+
+        source.runUserActionTask(new Task<CompilationController>() {
+            public void run(CompilationController parameter) {
+                try {
+                    parameter.toPhase(Phase.UP_TO_DATE);
+
+                    ErrorDescriptionSetterImpl setter = new ErrorDescriptionSetterImpl();
+
+                    performer.compute(parameter, doc, setter);
+
+                    highlights.addAll(setter.highlights);
+                } catch (IOException e) {
+                    e.printStackTrace();
+                } finally {
+		    l.countDown();
+		}
+            }
+        }, true);
+
+        l.await();
+
+        assertEquals(Arrays.asList(expected),
+                     highlights.stream()
+                               .map(h -> h.getHighlightTestData())
+                               .collect(Collectors.toList()));
     }
     
     public static Collection<HighlightImpl> toHighlights(Document doc, Map<Token, Coloring> colors) {
@@ -239,6 +367,20 @@ public abstract class TestBase extends NbTestCase {
         this.sourceLevel = sourceLevel;
     }
 
+    private List<String> extraOptions = new ArrayList<>();
+
+    protected final void enablePreview() {
+        String svName = SourceVersion.latest().name();
+        setSourceLevel(svName.substring(svName.indexOf('_') + 1));
+        extraOptions.add("--enable-preview");
+    }
+
+    private boolean showPrependedText;
+
+    protected final void setShowPrependedText(boolean showPrependedText) {
+        this.showPrependedText = showPrependedText;
+    }
+
     final class ErrorDescriptionSetterImpl implements SemanticHighlighterBase.ErrorDescriptionSetter {
         private final Set<HighlightImpl> highlights = new TreeSet<HighlightImpl>(new Comparator<HighlightImpl>() {
             public int compare(HighlightImpl o1, HighlightImpl o2) {
@@ -251,9 +393,14 @@ public abstract class TestBase extends NbTestCase {
         }
     
         @Override
-        public void setHighlights(Document doc, Collection<int[]> highlights) {
-            for (int[] h : highlights) {
-                this.highlights.add(new HighlightImpl(doc, h[0], h[1], EnumSet.of(getColoringAttribute())));
+        public void setHighlights(Document doc, Collection<Pair<int[], Coloring>> highlights, Map<int[], String> preText) {
+            for (Pair<int[], Coloring> h : highlights) {
+                this.highlights.add(new HighlightImpl(doc, h.first()[0], h.first()[1], h.second()));
+            }
+            if (showPrependedText) {
+                for (Entry<int[], String> e : preText.entrySet()) {
+                    this.highlights.add(new HighlightImpl(doc, e.getKey()[0], e.getKey()[1], e.getValue()));
+                }
             }
         }
 
@@ -273,4 +420,11 @@ public abstract class TestBase extends NbTestCase {
         }
     }
     
+    protected interface Input {
+        public FileObject prepare() throws Exception;
+    }
+
+    protected interface Validator {
+        public void validate(String actual) throws Exception;
+    }
 }
