@@ -51,7 +51,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -81,7 +81,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -111,7 +111,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -160,7 +160,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -183,14 +183,14 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "         String result;\n" +
                        "         switch (p) {\n" +
                        "             case 0: result = \"1\"; break;\n" +
-                       "             default: result = \"d\"; break;\n" +
+                       "             default: result = \"d\"; System.out.println(result); break;\n" +
                        "         }\n" +
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -199,7 +199,9 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                               "         String result;\n" +
                               "         switch (p) {\n" +
                               "             case 0 -> result = \"1\";\n" +
-                              "             default -> result = \"d\";\n" +
+                              "             default -> {\n" +
+                              "                 result = \"d\"; System.out.println(result);\n" +
+                              "             }\n" +
                               "         }\n" +
                               "     }\n" +
                               "}\n");
@@ -227,7 +229,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -306,7 +308,7 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                 .sourceLevel(SourceVersion.latest().name())
                 .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
-                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConverSwitchToRuleSwitch())
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
                 .assertCompilable()
                 .assertOutput("package test;" +
@@ -453,6 +455,388 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                               "         }\n" +
                               "     }\n" +
                               "}");
+    }
+
+    //Test cases for switch expression
+
+    public void testSwitch2SwitchExpression() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result = \"1\"; break;\n" +
+                       "             case 2: result = \"2\"; break;\n" +
+                       "             case 3: result = \"3\"; break;\n" +
+                       "             default: result = \"default\"; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         result = switch (p) {\n" +
+                              "             case 1 -> \"1\";\n" +
+                              "             case 2 -> \"2\";\n" +
+                              "             case 3 -> \"3\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionMultiCase() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "    private void test(int p) {\n" +
+                       "        String result;\n" +
+                       "        switch (p) {\n" +
+                       "            case 1:\n" +
+                       "            case 2: result = \"2\"; break;\n" +
+                       "            case 3: result = \"3\"; break;\n" +
+                       "            default: result = \"default\"; break;\n" +
+                       "        }\n" +
+                       "    }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         result = switch (p) {\n" +
+                              "             case 1, 2 -> \"2\";\n" +
+                              "             case 3 -> \"3\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionMultiCase2() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "    private void test(int p) {\n" +
+                       "        String result;\n" +
+                       "        switch (p) {\n" +
+                       "            case 1:\n" +
+                       "            case 2: result = \"2\"; break;\n" +
+                       "            case 3: result = \"3\"; break;\n" +
+                       "            default: result = \"default\";\n" +
+                       "        }\n" +
+                       "    }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "    private void test(int p) {\n" +
+                              "        String result;\n" +
+                              "        result = switch (p) {\n" +
+                              "            case 1, 2 -> \"2\";\n" +
+                              "            case 3 -> \"3\";\n" +
+                              "            default -> \"default\";\n" +
+                              "        };\n" +
+                              "    }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionOnlyDefault() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "    private void test(int p) {\n" +
+                       "        String result;\n" +
+                       "        switch (p) {\n" +
+                       "            default: result = \"default\";\n" +
+                       "        }\n" +
+                       "    }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "    private void test(int p) {\n" +
+                              "        String result;\n" +
+                              "        result = switch (p) {\n" +
+                              "            default -> \"default\";\n" +
+                              "        };\n" +
+                              "    }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedInnerSwitchExpression() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         int i = 10;\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result = switch (i) {\n" +
+                       "                         case 1 -> \"one\"; \n" +
+                       "                         default -> \"Inner default\"; \n" +
+                       "                     }; break;\n" +
+                       "             case 2: result = \"2\"; break;\n" +
+                       "             default: result = \"default\"; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("4:9-4:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         int i = 10;\n" +
+                              "         String result;\n" +
+                              "         result = switch (p) {\n" +
+                              "             case 1 -> switch (i) {\n" +
+                              "                 case 1 -> \"one\";\n" +
+                              "                 default -> \"Inner default\";\n" +
+                              "         };\n" +
+                              "             case 2 -> \"2\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionReturnValue() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private String test(int p) {\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: return \"1\"; \n" +
+                       "             default: return \"default\"; \n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("2:9-2:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private String test(int p) {\n" +
+                              "         return switch (p) {\n" +
+                              "             case 1 -> \"1\";\n" +
+                              "             default -> \"default\";\n" +
+                              "         };\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionTypeCast() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p, Object o1, Object o2) {\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result =  (String)o1; break;\n" +
+                       "             default: result = (String)o2; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p, Object o1, Object o2) {\n" +
+                              "         String result;\n" +
+                              "         result = (String) (switch (p) {\n" +
+                              "             case 1 -> o1;\n" +
+                              "             default -> o2;\n" +
+                              "         });\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionTypeCastReturn() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private String test(int p, Object o1, Object o2) {\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: return (String)o1;\n" +
+                       "             default: return (String)o2;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("2:9-2:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private String test(int p, Object o1, Object o2) {\n" +
+                              "         return (String) (switch (p) {\n" +
+                              "             case 1 -> o1;\n" +
+                              "             default -> o2;\n" +
+                              "         });\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedSwitchExpression() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p, int q, Object o1, Object o2) {\n" +
+                       "         String result;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1: result =  (String)(switch(q){ \n" +
+                       "                        case 2 -> o2; \n" +
+                       "                        default -> o1;\n" +
+                       "                        }); break; \n" +
+                       "             default: result = (String)o2; break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p, int q, Object o1, Object o2) {\n" +
+                              "         String result;\n" +
+                              "         result = (String) (switch (p) {\n" +
+                              "             case 1 -> switch(q){ \n" +
+                              "                        case 2 -> o2; \n" +
+                              "                        default -> o1;\n" +
+                              "                        };\n" +
+                              "             default -> o2;\n" +
+                              "         });\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedOuterSwitchStatement() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         String result;\n" +
+                       "         int x = 10;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1 : \n" +
+                       "                switch (x) {\n" +
+                       "                    case 1 : result = \"1\"; break;\n" +
+                       "                    default : result =  \"Inner Default\"; break;\n" +
+                       "                }\n" +
+                       "             break;\n" +
+                       "             default:\n" +
+                       "                result = \"d\";\n" +
+                       "                break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("4:9-4:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         int x = 10;\n" +
+                              "         switch (p) {\n" +
+                              "             case 1 -> {\n" +
+                              "                switch (x) {\n" +
+                              "                    case 1 : result = \"1\"; break;\n" +
+                              "                    default : result =  \"Inner Default\"; break;\n" +
+                              "                 }\n" +
+                              "             }\n" +
+                              "             default -> result = \"d\";\n" +
+                              "         }\n" +
+                              "     }\n" +
+                              "}\n");
+    }
+
+    public void testSwitch2SwitchExpressionNestedInnerSwitchStatement() throws Exception {
+        HintTest.create()
+                .input("package test;" +
+                       "public class Test {\n" +
+                       "     private void test(int p) {\n" +
+                       "         String result;\n" +
+                       "         int x = 10;\n" +
+                       "         switch (p) {\n" +
+                       "             case 1 : \n" +
+                       "                switch (x) {\n" +
+                       "                    case 1 : result = \"1\"; break;\n" +
+                       "                    default : result =  \"Inner Default\"; break;\n" +
+                       "                }\n" +
+                       "                break;\n" +
+                       "             default:\n" +
+                       "                result = \"d\";\n" +
+                       "                break;\n" +
+                       "         }\n" +
+                       "     }\n" +
+                       "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
+                .run(ConvertSwitchToRuleSwitch.class)
+                .findWarning("6:16-6:22:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
+                .applyFix()
+                .assertCompilable()
+                .assertOutput("package test;" +
+                              "public class Test {\n" +
+                              "     private void test(int p) {\n" +
+                              "         String result;\n" +
+                              "         int x = 10;\n" +
+                              "         switch (p) {\n" +
+                              "             case 1 :\n" +
+                              "             result = switch (x) {\n" +
+                              "                 case 1 -> \"1\";\n" +
+                              "                 default ->  \"Inner Default\";\n" +
+                              "             };\n" +
+                              "                 break;\n\n" +
+                              "             default:\n" +
+                              "                 result = \"d\";\n" +
+                              "                 break;\n" +
+                              "         }\n" +
+                              "     }\n" +
+                              "}\n");
     }
 
     public static Test suite() {
